sass/speakersbureau.scss
@font-face {
  font-family: 'font_awesome_6_brandsregular';
  src: url('fonts/fa-brands-regular.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

// DIRECTORY
body#databaseRecordsPage.h-page-with-database-speakers-bureau {
  .h-card-with-database-speakers-bureau {
    .card-byline,
    .card-meta {
      display: none;
    }
  }

  .h-post-box-with-database-speakers-bureau {
    .post-box-list-byline,
    .post-list-post-box-meta {
      display: none;
    }
  }

  #homePageButtons {
    display: flex;
    flex-direction: row;

    li {
      flex: 1;
    }
  }

  // Trending & Following buttons
  #homePageButtons li#homePageButtons_2_buttonContainer,
  #homePageButtons li#homePageButtons_3_buttonContainer {
    display: none;
  }

  // Change "New" to "Gallery" in super icky way
  #homePageButtons li#homePageButtons_1_buttonContainer a {
    font-size: 0;
    &::after {
      font-size: 1em;
      content: 'Gallery';
    }
  }
}

// SEARCH
body#databaseRecordsPage.h-page-with-database-speakers-bureau #searchRecordsForm {

  #searchRecordsForm_searcher_notWords_control,
  #tagFilterInput_control,
  #tagFilters,
  #memberFilterLabelSearchUserSearchInput_control,
  #memberFilterLabels,
  #postedBetweenDates,
  #customFieldInput691788177757829604_control, // website
  #customFieldInput691788177756972965_control, // title
  #customFieldInput691788177757829606_control, // LinkedIn
  #customFieldInput691788177757829605_control, // Twitter
  #customFieldInput691788177757829607_control, // Instagram
  #customFieldInput691788177757829608_control, // Facebook
  #customFieldInput691788177757829603_control, // My Story includes
  #customFieldInput691788177757829601_control, // Why I Weave includes
  #customFieldInput691788177769229404_control, // Speaking Experience includes
  #searchSortOptions_control {
    display: none;
  }

  #customFieldInput691788177756794195_control .form-label::after { // I Live In
    content: ' includes';
    font-style: italic;
  }

}

// INDIVIDUAL PROFILE
body#databaseRecordPage.h-page-with-database-speakers-bureau {
  .title-image-box {
    aspect-ratio: 1/1;

    .cropped-image-container,
    .title-image-container {
      height: 100%;
      border-radius: 50%;
      border: 12px solid #2a2a68;
    }
  }

  .h-record-field-label {
    color: #2a2a68;
    font-weight: bold;
  }

  .content-header {
    // hide last editor
    display: none;
  }

  .sb-profile {
    display: flex;
    flex-direction: column;

    @media (min-width: 768px) {
      flex-direction: row;

      .basics {
        flex: 0;
        flex-basis: 300px;
      }

      .detail {
        flex: 1;
        margin-left: 1em;
      }
    }
  }

  // .h-record-field-row-for-TITLE,
  // .h-record-field-row-for-I_LIVE_IN {
  //   color: #2a2a68;
  //   font-weight: bold;
  //   margin: 0;
  // }


  .icon {
    font-family: "Font Awesome 5 Pro", font_awesome_6_brandsregular, "Font Awesome 5 Brands";
  }

  .links {
    display: flex;
    justify-content: space-around;

    a {
      font-size: 0; // ick

      &::before {
        font-size: 26px;
        font-family: "Font Awesome 5 Pro", font_awesome_6_brandsregular, "Font Awesome 5 Brands";
      }
    }

    a::before {
      content: "\f0c1"; // link
    }

    a[href*="//twitter.com/"]::before {
      content: "\f081"; // square-twitter
    }

    a[href*="//instagram.com/"]::before {
      content: "\e055"; // square-instagram
    }

    a[href*="//linkedin.com/"]::before {
      content: "\f08c"; // linkedin (no square variant)
    }

    a[href*="//facebook.com/"]::before {
      content: "\f082"; // square-facebook
    }

    a[href*="//tiktok.com/"]::before {
      content: "\e07b"; // tiktok (no square variant as of 6.1)
    }
  }

  .buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
}

